[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comboKR"
version = "0.0.1"
authors = [
  { name="Riikka Huusari", email="riikka.huusari@aalto.fi" },
]
description = "ComboKR for predicting drug response surfaces"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy>=1.24.5", "scikit-learn>=1.0.2"]

[project.urls]
Homepage = "https://github.com/aalto-ics-kepaco/comboKR"
